--- a/src/layouts/header/top/wrapper/nav/nav.css
+++ b/src/layouts/header/top/wrapper/nav/nav.css
@@ -152,7 +152,7 @@ a {
 }
 
 .headerA__nav-menu .nav-menu-title {
-  font-size: 16px !important;
+  font-size: 14px !important;
   display: inline-block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -378,7 +378,7 @@ a {
 /* === LANGUAGE/CURRENCY SELECTOR === */
 .nav-selector-text {
   display: inline-block;
-  font-size: 14px !important;
+  font-size: 12px !important;
   font-weight: normal !important;
   -webkit-font-smoothing: antialiased !important;
   -moz-osx-font-smoothing: grayscale !important;
